[fix]: fixed overflow and added story icon placeholder

--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -66,7 +66,17 @@ h3 {
 }
 
 .slider-container {
+  margin: 0;
   margin-bottom: 75px;
+}
+
+.slider-container_left {
+  position: relative;
+}
+.slider-container_left > img {
+  position: absolute;
+  left: 50%;
+  top: 35%;
 }
 
 /* Mobile styles */
